feat: 服务端合并